<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/color_white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/popup_set_time_title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/popup_set_time_title"
            android:textSize="@dimen/setting_text_size"/>

        <EditText
            android:id="@+id/popup_set_time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/popup_set_time_hint"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/popup_set_time_cancel"
                android:text="@string/text_cancel"
                android:background="@color/color_white"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/popup_set_time_ok"
                android:text="@string/text_confirm"
                android:background="@color/color_white"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>