<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.stephen.nophone.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/back"
                android:layout_gravity="center_vertical"
                android:paddingStart="-12dp"
                android:layout_marginEnd="-8dp"
                android:layout_width="32dp"
                android:layout_height="32dp" />
            <TextView
                android:text="@string/text_back"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/frag_main_set_time"
                android:text="@string/user_set_time"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/frag_main_show_time"
                android:textSize="@dimen/setting_second_text_size"
                android:text="90min"
                android:textColor="@color/color_second_text"
                android:layout_toStartOf="@+id/set_use_time_go"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/set_use_time_go"
                android:src="@drawable/go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/set_sleep_time"
                android:text="@string/set_sleep_time"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/set_sleep_time_show"
                android:textSize="@dimen/setting_second_text_size"
                android:text="90min"
                android:textColor="@color/color_second_text"
                android:layout_toStartOf="@+id/set_sleep_time_go"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/set_sleep_time_go"
                android:src="@drawable/go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/set_bg"
                android:text="@string/user_set_bg"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/set_bg_go"
                android:src="@drawable/go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/frag_main_recharge"
                android:text="@string/recharge"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/frag_main_go_4"
                android:src="@drawable/go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/frag_main_about_us"
                android:text="@string/about_us"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/frag_main_go_3"
                android:src="@drawable/go"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_line_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/frag_main_admin_switch"
                android:text="@string/admin_switch"
                android:textSize="@dimen/setting_text_size"
                android:textColor="@color/color_main_text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/frag_main_switch"
                android:src="@drawable/go"
                android:checked="false"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
